WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84755
Web Inspector: REGRESSION: Incorrect highlight position for inspected elements in scrolled page
https://bugs.webkit.org/show_bug.cgi?id=84755
Summary
Web Inspector: REGRESSION: Incorrect highlight position for inspected element...
Xianzhu Wang
Reported
2012-04-24 13:11:18 PDT
See crbug.com/124796 It was caused by my change
http://trac.webkit.org/changeset/114659/
Sorry for the break. Will fix soon.
Attachments
patch
(13.16 KB, patch)
2012-04-24 18:10 PDT
,
Xianzhu Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xianzhu Wang
Comment 1
2012-04-24 18:10:06 PDT
Created
attachment 138706
[details]
patch
Pavel Feldman
Comment 2
2012-04-24 22:23:48 PDT
Comment on
attachment 138706
[details]
patch Could you also add a test covering the highlight position for the scrolled iframe? I remember it has been regressing as well earlier.
WebKit Review Bot
Comment 3
2012-04-25 00:10:39 PDT
Comment on
attachment 138706
[details]
patch Clearing flags on attachment: 138706 Committed
r115172
: <
http://trac.webkit.org/changeset/115172
>
WebKit Review Bot
Comment 4
2012-04-25 00:10:44 PDT
All reviewed patches have been landed. Closing bug.
Xianzhu Wang
Comment 5
2012-04-25 08:49:31 PDT
(In reply to
comment #2
)
> (From update of
attachment 138706
[details]
) > Could you also add a test covering the highlight position for the scrolled iframe? I remember it has been regressing as well earlier.
Filed
https://bugs.webkit.org/show_bug.cgi?id=84869
for it.
Timothy Hatcher
Comment 6
2012-04-26 13:57:26 PDT
***
Bug 84655
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug