Source/WebCore: Web Inspector: Incorrect highlight position of inspected element in a scrolled page https://bugs.webkit.org/show_bug.cgi?id=84755

Reviewed by Pavel Feldman.

Test: inspector/elements/highlight-node-scroll.html

* inspector/DOMNodeHighlighter.cpp: Ensures the highlight position is in page coordinates.

LayoutTests: Web Inspector: REGRESSION: Incorrect highlight position of inspected element in scrolled page
https://bugs.webkit.org/show_bug.cgi?id=84755

Reviewed by Pavel Feldman.

* http/tests/inspector/elements-test.js: Extracted common function dumpInspectorHighlightRects() into here with a small bug fixed (x and y inversed).
* inspector/elements/highlight-node-scaled-expected.txt: Corrected the wrong inversed x and y.
* inspector/elements/highlight-node-scaled.html: Extracted out dumpInspectorHighlightRects().
* inspector/elements/highlight-node-scroll-expected.txt: Added. Expectation of the new test case.
* inspector/elements/highlight-node-scroll.html: Added. The new test case.
* inspector/elements/highlight-node.html: Extracted out dumpInspectorHighlightRects(). Expectation not changed because the x and y happened to be the same in the original expectation.
* inspector/elements/highlight-svg-root.html: Ditto.


Canonical link: https://commits.webkit.org/102326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115172 268f45cc-cd09-0410-ab3c-d52691b4dbfc